@@ -6,6 +6,7 @@ HISTORY
     - defragmentation algorithm reimplemented; partial defragmentation improved
     - actions to take after processing is done implemented as separate menu
     - file status was added to reports
+    - current time was added to reports
     - the following translations were updated:
 
       Italian, Norwegian, Portuguese, Spanish(ES)
